--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@capacitor/core": "3.1.2",
-    "@angular/fire": "^6.1.5",
     "@ionic/angular": "^5.5.2",
     "firebase": "^8.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@types/googlemaps": "^3.39.12"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
